fix(text,quick-contact): increase link color for better contrasts

--- a/src/scss/mixins/_text.scss
+++ b/src/scss/mixins/_text.scss
@@ -13,7 +13,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    color: rgba($color-secondary, .6);
+    color: rgba($color-secondary, .8);
     transition: color .2s;
     cursor: pointer;
 
@@ -27,19 +27,20 @@
         position: absolute;
         left: 50%;
         bottom: -5px;
-        background-color: #61718c;
-        transition: width .2s, left .2s;
+        background-color: transparent;
+        transition: width .2s, left .2s, background-color .2s;
         content: ' ';
     }
 
     @media (hover: hover) {
         &:hover {
-            color: #61718c;
+            color: $color-secondary;
         }
 
         &:hover &__text::after {
             width: 100%;
             left: 0;
+            background-color: $color-secondary;
         }
     }
 }
